# ChangeLog for app-text/ps2pkm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ps2pkm/ChangeLog,v 1.27 2012/07/26 11:54:00 aballier Exp $

*ps2pkm-1.5_p20120701 (26 Jul 2012)

  26 Jul 2012; Alexis Ballier <aballier@gentoo.org>
  +ps2pkm-1.5_p20120701.ebuild:
  Bump to TeX Live 2012 version.

  09 May 2012; Alexis Ballier <aballier@gentoo.org>
  ps2pkm-1.5_p20110705.ebuild:
  keyword ~amd64-fbsd

  09 May 2012; Alexis Ballier <aballier@gentoo.org>
  -ps2pkm-1.5_p20100722.ebuild:
  remove old

  06 May 2012; Raúl Porcel <armin76@gentoo.org> ps2pkm-1.5_p20110705.ebuild:
  ia64/s390/sh/sparc stable wrt #395735

  04 Mar 2012; Tobias Klausmann <klausman@gentoo.org>
  ps2pkm-1.5_p20110705.ebuild:
  Stable on alpha, bug #395735

  03 Mar 2012; Brent Baude <ranger@gentoo.org> ps2pkm-1.5_p20110705.ebuild:
  Marking ps2pkm-1.5_p20110705 ppc64 stable for bug 395735

  02 Mar 2012; Brent Baude <ranger@gentoo.org> ps2pkm-1.5_p20110705.ebuild:
  Marking ps2pkm-1.5_p20110705 ppc stable for bug 395735

  29 Jan 2012; Markus Meier <maekke@gentoo.org> ps2pkm-1.5_p20110705.ebuild:
  arm stable, bug #395735

  17 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ps2pkm-1.5_p20110705.ebuild:
  x86 stable wrt bug #395735

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> ps2pkm-1.5_p20110705.ebuild:
  Stable for amd64, wrt bug #395735

  28 Dec 2011; Jeroen Roovers <jer@gentoo.org> ps2pkm-1.5_p20110705.ebuild:
  Stable for HPPA (bug #395735).

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> ps2pkm-1.5_p20100722.ebuild:
  Stable for HPPA (bug #355085).

  18 Sep 2011; Raúl Porcel <armin76@gentoo.org> ps2pkm-1.5_p20100722.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #355085

  14 Aug 2011; Markus Meier <maekke@gentoo.org> ps2pkm-1.5_p20100722.ebuild:
  arm stable, bug #355085

  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ps2pkm-1.5_p20100722.ebuild:
  ppc/ppc64 stable wrt #355085
